# registro-star-wars-revolta-dos-clones-devops

./: README.md
.github/workflows/: ci-cd.yml
backend/: .env.example  Dockerfile  README.md  auth.py  database.py  docker-compose.yml  main.py  manage.py  models.py  pyproject.toml  requirements.txt  schemas.py  uploader.py  users.py
docs/: relatorio.md
frontend/: Dockerfile  index.html
